Display the list of movies and their details using data in the database.

--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -6,3 +6,17 @@
 
 <h2>Details Movie</h2>
 <h2>@Model.Name</h2>
+<ul>
+    <li>
+        Ganre: @Model.Ganre.Name
+    </li>
+    <li>
+        Release Date: @Model.Ganre.ReleaseDate
+    </li>
+    <li>
+        DateAdded: @Model.Ganre.DateAdded
+    </li>
+    <li>
+        Number: @Model.Ganre.Number
+    </li>
+</ul>
