Add a form to create/edit a movie

--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -11,12 +11,12 @@
         Ganre: @Model.Ganre.Name
     </li>
     <li>
-        Release Date: @Model.Ganre.ReleaseDate
+        Release Date: @Model.ReleaseDate
     </li>
     <li>
-        DateAdded: @Model.Ganre.DateAdded
+        DateAdded: @Model.DateAdded
     </li>
     <li>
-        Number: @Model.Ganre.Number
+        Number: @Model.NumberInStock
     </li>
 </ul>
