--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -3,7 +3,10 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<h1>Customers</h1>
+<p>
+    @Html.ActionLink("NEW CUSTOMER", "New", "Customers", new { @class = "btn btn-primary" })
+</p>
 @if (!Model.Any())
 {
     <p>We don't have any customers yet.</p>
@@ -22,7 +25,7 @@ else
             {
                 <tr>
                     <td>
-                        @Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)
+                        @Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)
                     </td>
                     <td>
                         @customer.MembershipType.Name
