--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -35,7 +35,7 @@
                         }
                     },
                     {
-                        data: "name"
+                        data: "membershipType.name"
                     },
                     {
                         data: "id",
@@ -49,10 +49,10 @@
         $("#customers").on("click", ".js-delete", function () {
             var button = $(this);
 
-            bootbox.confirm("Are you sure you want to delete this customer?", function () {
+            bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
                 if (result) {
                     $.ajax({
-                        url: "api/customers/" + button.attr("data-customer-id"),
+                        url: "/api/customers/" + button.attr("data-customer-id"),
                         method: "DELETE",
                         success: function () {
                             button.parents("tr").remove();
