--- a/Vidly/Views/Account/Register.cshtml
+++ b/Vidly/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Vidly.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Регистрация";
+    ViewBag.Title = "Register";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Создайте новую учетную запись.</h4>
+    <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary()
     <div class="form-group">
@@ -30,8 +30,14 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.DrivingLicense, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.DrivingLicense, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Регистрация" />
+            <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
 }
